chore: add server and MongoDB configuration to application.yaml

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -1,3 +1,11 @@
+server:
+  port: 8080
+  
 spring:
   application:
     name: backend
+
+  mongodb:
+    host: localhost
+    port: 1234
+    database: lets_play_db
